Refactor and update the bot (Untested)
Signed-off-by: KiriCattus <19393068+KiriCattus@users.noreply.github.com>